extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.out
* _pp.ob
MODULE forname;

BEGIN
    FOR avar1 := 1 TO 2 DO
        
    END;
    FOR avar1 := 5 TO 6 DO
        avar2 := 7
    END;
    FOR avar1 := avar2 * 3 TO 5 - avar2 DO
        avar2 := avar1 MOD 8;
        avar3 := avar2 DIV 9
    END;
    FOR avar1 := avar2 TO avar2 + 3 BY 2 DO
        avar2 := avar2 + 1
    END;
    FOR avar1 := avar2 TO avar2 DIV 2 BY -avar3 DO
        avar2 := avar2 * 10
    END
END forname.
* errors
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:4:9:error: avar1 is not declared
    FOR avar1 := 1 TO 2 DO
        ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:7:9:error: avar1 is not declared
    FOR avar1 := 5 TO 6 DO
        ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:8:9:error: avar2 is not declared
        avar2 := 7
        ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:11:9:error: avar1 is not declared
    FOR avar1 := avar2 * 3 TO 5 - avar2 DO
        ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:11:18:error: avar2 is not declared
    FOR avar1 := avar2 * 3 TO 5 - avar2 DO
                 ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:11:35:error: avar2 is not declared
    FOR avar1 := avar2 * 3 TO 5 - avar2 DO
                                  ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:12:9:error: avar2 is not declared
        avar2 := avar1 MOD 8;
        ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:12:18:error: avar1 is not declared
        avar2 := avar1 MOD 8;
                 ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:13:9:error: avar3 is not declared
        avar3 := avar2 DIV 9
        ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:13:18:error: avar2 is not declared
        avar3 := avar2 DIV 9
                 ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:16:9:error: avar1 is not declared
    FOR avar1 := avar2 TO avar2 + 3 BY 2 DO
        ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:16:18:error: avar2 is not declared
    FOR avar1 := avar2 TO avar2 + 3 BY 2 DO
                 ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:16:27:error: avar2 is not declared
    FOR avar1 := avar2 TO avar2 + 3 BY 2 DO
                          ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:17:9:error: avar2 is not declared
        avar2 := avar2 + 1
        ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:17:18:error: avar2 is not declared
        avar2 := avar2 + 1
                 ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:20:9:error: avar1 is not declared
    FOR avar1 := avar2 TO avar2 DIV 2 BY -avar3 DO
        ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:20:18:error: avar2 is not declared
    FOR avar1 := avar2 TO avar2 DIV 2 BY -avar3 DO
                 ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:20:27:error: avar2 is not declared
    FOR avar1 := avar2 TO avar2 DIV 2 BY -avar3 DO
                          ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:20:43:error: avar3 is not declared
    FOR avar1 := avar2 TO avar2 DIV 2 BY -avar3 DO
                                          ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:21:9:error: avar2 is not declared
        avar2 := avar2 * 10
        ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/forname.ob:21:18:error: avar2 is not declared
        avar2 := avar2 * 10
                 ^
